ProtocolTemple iteration
