# ProjApp.Database/EntitiesStatic/ProtocolGroup.cs
@@ -1,0 +1,11 @@
+using System.Text.Json.Serialization;
+
+namespace ProjApp.Database.EntitiesStatic;
+
+[JsonConverter(typeof(JsonStringEnumConverter))]
+public enum ProtocolGroup
+{
+    Манометры,
+    Датчики_давления,
+    Термометры_биметаллические
+}
